--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -59,7 +59,11 @@ body {
   margin-top: 28px;
 }
 
-.angular-google-map-container { height: 500px; }
+.angular-google-map-container { 
+  height:400px;
+  margin:12px;
+  box-shadow:0 3px 25px black;
+}
 
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
